Controller class for handling file-related operations.